--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@
 <style>
     body{
         
-        background: url('https://img.kbs.co.kr/kbs/620/news.kbs.co.kr/data/fckeditor/new/image/2022/07/21/313731658379139117.jpg');
+        background: url('https://img.freepik.com/premium-vector/bitcoin-coins-flying-isolated-on-a-white-background-bitcoin-virtual-cryptocurrency-explosion-realistic-3d-vector-illustration_545793-757.jpg?w=1060');
         background-size: cover; 
         background-repeat: no-repeat;
         
