배경화면 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -152,14 +152,11 @@
 
     </center>
 </body>
-<style>
-    body{
-        
-        background: url('https://img.freepik.com/premium-vector/bitcoin-coins-flying-isolated-on-a-white-background-bitcoin-virtual-cryptocurrency-explosion-realistic-3d-vector-illustration_545793-757.jpg?w=1060');
-        background-size: cover; 
-        background-repeat: no-repeat;
-        
-        
-        }
-</style>
+<div style="
+background: url('https://img.freepik.com/premium-vector/bitcoin-coins-flying-isolated-on-a-white-background-bitcoin-virtual-cryptocurrency-explosion-realistic-3d-vector-illustration_545793-757.jpg?w=1060');
+background-size: cover; 
+background-repeat: no-repeat;
+background-position: center center;
+">
+</div>
 </html>
