배경화면 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,14 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <title>Index</title>
 </head>
-<div style="
-background: url('https://img.freepik.com/premium-vector/bitcoin-coins-flying-isolated-on-a-white-background-bitcoin-virtual-cryptocurrency-explosion-realistic-3d-vector-illustration_545793-757.jpg?w=1060');
-background-size: cover; 
-background-repeat: no-repeat;
+<style>
+    body {
+        background: url('https://img.freepik.com/premium-vector/bitcoin-coins-flying-isolated-on-a-white-background-bitcoin-virtual-cryptocurrency-explosion-realistic-3d-vector-illustration_545793-757.jpg?w=1060');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+</style>
 
-">
-</div>
 <center>
 
 
