배경화면 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
     body {
         background: url('https://img.freepik.com/premium-vector/bitcoin-coins-flying-isolated-on-a-white-background-bitcoin-virtual-cryptocurrency-explosion-realistic-3d-vector-illustration_545793-757.jpg?w=1060');
         background-size: cover;
+        background-color: #D9E5FF;
         background-repeat: no-repeat;
     }
 </style>
