배경화면수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,12 @@
     body {
         background: url('https://img.freepik.com/premium-vector/bitcoin-coins-flying-isolated-on-a-white-background-bitcoin-virtual-cryptocurrency-explosion-realistic-3d-vector-illustration_545793-757.jpg?w=1060');
         background-size: cover;
-        background-color: #D9E5FF;
+        background-color: hsl(308, 78%, 29%);
         background-repeat: no-repeat;
     }
 </style>
 
-<center>
+
 
 
     <div id="name_table" style="text-align:center"></div>
@@ -159,7 +159,7 @@
 
     </script>
 
-</center>
+
 </body>
 
 </html>
