--- a/templates/index.html
+++ b/templates/index.html
@@ -24,9 +24,9 @@
     <div id="name_table" style="text-align:center"></div>
 
 
-    <h3>코인 정보 보기</h3>
-    검색하려는 코인 : <input type="text" id="name"> <br>
-    <button id="selectCoin" onclick="selectCoin()">조회</button>
+    <h3 style="text-align:center">코인 정보 보기</h3>
+    검색하려는 코인 : <input type="text" id="name" style="text-align:center"> <br>
+    <button id="selectCoin" onclick="selectCoin()" style="text-align:center">조회</button>
 
     <div id="curve_chart"></div>
 
