--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     검색하려는 코인 : <input type="text" id="name" style="text-align:center"> <br>
     <button id="selectCoin" onclick="selectCoin()" style="text-align:center">조회</button>
 
-    <div id="curve_chart"></div>
+    <div id="curve_chart" style="text-align:center"></div>
 
     <script>
         function selectCoin() {
