--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 <style>
     body {
-        background: url('https://img.freepik.com/premium-vector/bitcoin-coins-flying-isolated-on-a-white-background-bitcoin-virtual-cryptocurrency-explosion-realistic-3d-vector-illustration_545793-757.jpg?w=1060');
+        background: url('https://news.kbs.co.kr/news/view.do?ncd=5515475');
         background-size: cover;
         background-color: hsl(308, 78%, 29%);
         background-repeat: no-repeat;
