--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 <style>
     body {
-        background: url('https://news.kbs.co.kr/news/view.do?ncd=5515475');
+        background: url('https://img.kbs.co.kr/kbs/620/news.kbs.co.kr/data/fckeditor/new/image/2022/07/21/313731658379139117.jpg');
         background-size: cover;
         background-color: hsl(308, 78%, 29%);
         background-repeat: no-repeat;
