--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,8 @@
         background-size: cover;
         background-color: hsl(308, 78%, 29%);
         background-repeat: no-repeat;
+        width: 35%;
+        margin: 0 auto;
     }
 </style>
 
