--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
 <style>
     body {
         background: url('https://img.kbs.co.kr/kbs/620/news.kbs.co.kr/data/fckeditor/new/image/2022/07/21/313731658379139117.jpg');
-        background-size: cover;
+        background-size: 100%;
         background-color: hsl(308, 78%, 29%);
         background-repeat: no-repeat;
-        width: 35%;
+        
         margin: 0 auto;
     }
 </style>
