--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,9 @@
         background-size: 100%;
         background-color: hsl(308, 78%, 29%);
         background-repeat: no-repeat;
+        background-attachment: fixed;
+
+
         
         margin: 0 auto;
     }
