--- a/templates/index.html
+++ b/templates/index.html
@@ -123,6 +123,7 @@
             }
 
             function selectname() {
+                document.getElementById("name_table").style.margin = "100px 0 0 0";
                 const xhttp = new XMLHttpRequest();
                 xhttp.onreadystatechange = function () {
                     if (this.readyState == 4 && this.status == 200) {
@@ -154,7 +155,7 @@
                         }
                     }
                 }
-                xhttp.open("POST", "/intro");
+                xhttp.open("GET", "/intro");
                 xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded")
                 xhttp.send();
             }
